--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,28 @@
       });
     });
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyCDn_gmygjeDiCGitDljFAsuW70h4Qc4w8",
+      authDomain: "sanjaymali.firebaseapp.com",
+      projectId: "sanjaymali",
+      storageBucket: "sanjaymali.appspot.com",
+      messagingSenderId: "400971790516",
+      appId: "1:400971790516:web:156837f7a5bcb53927ffe1",
+      measurementId: "G-5C7V6NQ2EB"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
